@@ -1,3 +1,4 @@
 .precomp/
 /roundrobin-slip-*
 /releases
+*.rakucov
