@@ -17,7 +17,7 @@
   "resources": [
   ],
   "source-url": "https://github.com/lizmat/roundrobin-slip.git",
-  "tags": [
+  "tags": [ "ROUNDROBIN"
   ],
   "test-depends": [
   ],
