@@ -2,7 +2,7 @@ name = roundrobin-slip
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/roundrobin-slip.rakumod
+filename = doc/roundrobin-slip.rakudoc
 
 [UploadToZef]
 
@@ -10,4 +10,6 @@ filename = lib/roundrobin-slip.rakumod
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
