@@ -63,48 +63,4 @@ sub EXPORT() {
       !! Map.new( ('&roundrobin' => &roundrobin) )
 }
 
-=begin pod
-
-=head1 NAME
-
-roundrobin-slip - Provide roundrobin(:slip) for older Rakus
-
-=head1 SYNOPSIS
-
-=begin code :lang<raku>
-
-use roundrobin-slip;
-
-.say for roundrobin((1,2), (3,4));        # (1 3)␤(2 4)␤
-
-.say for roundrobin((1,2), (3,4), :slip); # 1␤3␤2␤4␤
-
-=end code
-
-=head1 DESCRIPTION
-
-roundrobin-slip is a distribution that provides an extra candidate for
-the L<roundrobin|https://docs.raku.org/routine/roundrobin> function that
-will automatically L<slip|https://docs.raku.org/routine/slip> all values
-that are produced.
-
-=head1 AUTHOR
-
-Elizabeth Mattijsen <liz@raku.rocks>
-
-Source can be located at: https://github.com/lizmat/roundrobin-slip .
-Comments and Pull Requests are welcome.
-
-If you like this module, or what I’m doing more generally, committing to a
-L<small sponsorship|https://github.com/sponsors/lizmat/>  would mean a great
-deal to me!
-
-=head1 COPYRIGHT AND LICENSE
-
-Copyright 2021, 2024 Elizabeth Mattijsen
-
-This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
-
-=end pod
-
 # vim: expandtab shiftwidth=4
